--- a/website/public/css/sb-admin-2.css
+++ b/website/public/css/sb-admin-2.css
@@ -41,11 +41,11 @@
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
-*,
+/* *,
 *::before,
 *::after {
   box-sizing: border-box;
-}
+} */
 
 html {
   font-family: sans-serif;
@@ -54,9 +54,9 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
+/* article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block;
-}
+} */
 
 body {
   margin: 0;
@@ -73,11 +73,11 @@ body {
   outline: 0 !important;
 }
 
-hr {
+/* hr {
   box-sizing: content-box;
   height: 0;
   overflow: visible;
-}
+} */
 
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
@@ -100,49 +100,49 @@ abbr[data-original-title] {
   text-decoration-skip-ink: none;
 }
 
-address {
+/* address {
   margin-bottom: 1rem;
   font-style: normal;
   line-height: inherit;
-}
+} */
 
-ol,
+/* ol,
 ul,
 dl {
   margin-top: 0;
   margin-bottom: 1rem;
-}
+} */
 
-ol ol,
+/* ol ol,
 ul ul,
 ol ul,
 ul ol {
   margin-bottom: 0;
-}
+} */
 
-dt {
+/* dt {
   font-weight: 700;
-}
+} */
 
-dd {
+/* dd {
   margin-bottom: .5rem;
   margin-left: 0;
-}
+} */
 
-blockquote {
+/* blockquote {
   margin: 0 0 1rem;
-}
+} */
 
-b,
+/* b,
 strong {
   font-weight: bolder;
-}
+} */
 
-small {
+/* small {
   font-size: 80%;
-}
+} */
 
-sub,
+/* sub,
 sup {
   position: relative;
   font-size: 75%;
@@ -156,15 +156,15 @@ sub {
 
 sup {
   top: -.5em;
-}
+} */
 
-a {
+/* a {
   color: #4e73df;
   text-decoration: none;
   background-color: transparent;
-}
+} */
 
-a:hover {
+/* a:hover {
   color: #224abe;
   text-decoration: underline;
 }
@@ -177,9 +177,9 @@ a:not([href]):not([class]) {
 a:not([href]):not([class]):hover {
   color: inherit;
   text-decoration: none;
-}
+} */
 
-pre,
+/* pre,
 code,
 kbd,
 samp {
@@ -201,14 +201,14 @@ figure {
 img {
   vertical-align: middle;
   border-style: none;
-}
+} */
 
-svg {
+/* svg {
   overflow: hidden;
   vertical-align: middle;
-}
+} */
 
-table {
+/* table {
   border-collapse: collapse;
 }
 
@@ -218,17 +218,17 @@ caption {
   color: #858796;
   text-align: left;
   caption-side: bottom;
-}
+} */
 
-th {
+/* th {
   text-align: inherit;
   text-align: -webkit-match-parent;
-}
+} */
 
-label {
+/* label {
   display: inline-block;
   margin-bottom: 0.5rem;
-}
+} */
 
 button {
   border-radius: 0;
@@ -297,7 +297,7 @@ input[type="checkbox"] {
 
 textarea {
   overflow: auto;
-  resize: vertical;
+  /* resize: vertical; */
 }
 
 fieldset {
